# runic-wormhole

./: README.md  package-lock.json  package.json
.github/: dependabot.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  fs.rs  lib.rs  main.rs  util.rs
src/lib/: localstorage.svelte.ts  tauri-window.svelte.ts  window.svelte.ts  wormhole.svelte.ts
src/lib/components/: mode-toggle.svelte
src/lib/components/ui/input/: input.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/receive/: +page.svelte
src/routes/send/: +page.svelte
src/routes/settings/: +page.svelte
