[package]
name = "runic-wormhole"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runic_wormhole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
wormhole = { package = "magic-wormhole", version = "0.7.6" }
thiserror = "2.0.12"
async-std = "1.13.1"
tauri-plugin-dialog = "2.3.2"
tokio = "1.47.0"
tauri-plugin-fs = "2.4.1"
futures = "0.3.31"
chrono = "0.4.41"
