[package]
name = "runic-wormhole"
version = "0.1.0"
description = "Cross-platform app to transfer files between devices using the magic wormhole protocol"
license = "GPL-3.0-only"
authors = ["Zlendy"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runic_wormhole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wormhole = { package = "magic-wormhole", version = "0.7.6" }
thiserror = "2.0.16"
async-std = "1.13.2"
tauri-plugin-dialog = "2.3.3"
tokio = "1.47.1"
tauri-plugin-fs = "2.4.2"
futures = "0.3.31"
chrono = "0.4.41"
